[package]
name = "gamesense"
version = "0.1.0"
authors = ["ptrstr <ptrstr@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
reqwest = {version = "0.11.2", features = ["blocking", "json"]}
anyhow = "1.0.40"
